images and video added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         <h1>Discover hidden places in the world around you</h1>
         <a href="#">Download Excursion (Coming soon!)</a>
     </header>
+    <main>
+        <video src="./resources/excursion.mp4" controls></video>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+        <img src="./resources/camp.jpg" alt="Photo of camp at dusk">
+        <img src="./resources/phone.png" alt="mobile phone icon">
+    </main>
 </body>
 
 </html>
