Completed as per design sheet

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
         <video src="./resources/excursion.mp4" controls></video>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you</p>
-        <img src="./resources/camp.jpg" alt="Photo of camp at dusk">
+        <img src="./resources/camp.jpg" alt="Photo of camp at dusk"> <br><br>
         <img src="./resources/phone.png" alt="mobile phone icon">
     </main>
+    <footer>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href="#">Download Excursion (Coming soon!)</a>
+        <p>&copy; Excursion</p>
+    </footer>
 </body>
 
 </html>
